fix /me endpoint returning null bug